NetworkSecurity/testNginxPodNP.yml
apiVersion: v1
kind: Pod
metadata:
  name: client
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do curl -m 3 <pod_IP>; sleep 5; done']
